// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubTitle component matches snapshot with a label prop 1`] = `
<div>
  <span
    class="MuiTypography-root-2 MuiTypography-overline-22 MuiTypography-gutterBottom-29 SubTitle-label-1"
    data-testid="subtitle-label"
  >
    Partner: 
  </span>
  <h6
    class="MuiTypography-root-2 MuiTypography-subtitle1-20 MuiTypography-gutterBottom-29"
    data-testid="subtitle-content"
  >
    Partner1
  </h6>
</div>
`;

exports[`SubTitle component matches snapshot without a label prop 1`] = `
<div>
  <h6
    class="MuiTypography-root-39 MuiTypography-subtitle1-57 MuiTypography-gutterBottom-66"
    data-testid="subtitle-content"
  >
    Partner1
  </h6>
</div>
`;
